subida que empieza a tener forma

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,7 +8,7 @@ $uoc-masterbrand: #73edff;
 $uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
 
 $theme-colors: (
-  "primary": #fabada // pon el código de color que prefieras
+  "primary": #cccccc // pon el código de color que prefieras
 );
 $ancho-maximo: 1300px;
 $ancho-maximo-poster:750px;
