--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,11 +8,12 @@ $uoc-masterbrand: #73edff;
 $uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
 
 $theme-colors: (
-  "primary": #cccccc // pon el código de color que prefieras
+  "primary": #3d6bc0 // pon el código de color que prefieras
 );
 $ancho-maximo: 1300px;
 $ancho-maximo-poster:750px;
 $main: #fff;
 $accent: #fe320f;
-$text: #282828;
+$text: #fff;
 $grisClaro: #cccccc;
+$color-fondo:#111d2d;
