color fondo menu inferior

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -4,7 +4,8 @@ body {
 }
 
 a{
-
+  text-decoration: none;
+  color: #111d2d;
 }
 
 .grid-1 {
@@ -38,7 +39,7 @@ a{
 
 .item-2 {
   margin:0;
-  height: 450px;
+  height: 600px;
   color: white;
  }
 
@@ -46,7 +47,7 @@ a{
 
 }
 .item-4 {
-  background: #6a478f;
+background-color: #111d2d;
  }
 
 .menu-superior {
