index ok stylelint. Index perfecto ya

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
 @use "sass:color";
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family-sans-serif: -apple-system, blinkmacssystemfont, "Segoe UI", roboto, "Helvetica Neue", arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-family-serif: "Georgia", "Times New Roman", serif;
 
 $uoc-corporate: #000078;
@@ -15,5 +15,5 @@ $ancho-maximo-poster:750px;
 $main: #fff;
 $accent: #fe320f;
 $text: #fff;
-$grisClaro: #cccccc;
+$grisClaro: #ccc;
 $color-fondo:#111d2d;
