--- a/src/assets/styles/layouts/bandas.scss
+++ b/src/assets/styles/layouts/bandas.scss
@@ -1,33 +1,26 @@
-/*--------------------------------------------------------------
-Layouts
---------------------------------------------------------------*/
-
 .centered {
-    margin: 0 auto;
-    padding: 0 1em;
+  padding: 0 1em;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 52em) {
-    .centered {
-        max-width: 52em;
-    }
+  .centered {
+    max-width: 52em;
+  }
 }
-
-/*--------------------------------------------------------------
-Typography
---------------------------------------------------------------*/
 
 .card {
-  background: white;
   margin-bottom: 2em;
+  background: #fff;
 }
 
-.card a {
-  color: black;
+.enlace {
+  color: #000;
   text-decoration: none;
 }
 
 .card a:hover {
+  text-decoration: none;
   box-shadow: 3px 3px 8px hsl(0, 0%, 70%);
 }
 
@@ -35,40 +28,39 @@ Typography
   padding: 1.4em;
 }
 
-.card-content h2 {
+.card-titulo {
   margin-top: 0;
   margin-bottom: .5em;
-  font-weight: normal;
+  font-weight: 400;
 }
 
-.card-content p {
+.card-texto {
   font-size: 95%;
 }
 
-/* Flexbox stuff */
 
 @media screen and (min-width: 40em) {
-    .cards {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: -1em;
-    }
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: -1em;
+  }
 
-    .card {
-        display: flex;
-        flex: 0 1 calc(50% - .5em);
-        margin-bottom: 1em;
-    }
+  .card {
+    display: flex;
+    flex: 0 1 calc(50% - .5em);
+    margin-bottom: 1em;
+  }
 }
 
 @media screen and (min-width: 60em) {
-    .cards {
-        margin-top: inherit;
-    }
+  .cards {
+    margin-top: inherit;
+  }
 
-    .card {
-        flex: 0 1 calc(33% - 1em);
-        margin-bottom: 2em;
-    }
+  .card {
+    flex: 0 1 calc(33% - 1em);
+    margin-bottom: 2em;
+  }
 }
