--- a/src/assets/styles/layouts/blog.scss
+++ b/src/assets/styles/layouts/blog.scss
@@ -23,3 +23,21 @@
 .imagen-flotante{
   float: left;
 }
+
+.imagen-carrusel{
+  width: 80%;
+}
+
+@media only screen and  (min-width: 100px) and (max-width: 600px){
+  .imagen-flotante{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
+  }
+
+  .imagen-carrusel{
+    width: 100%;
+  }
+}
